name:                purely-functional-data-structures
version:             0.1.0.0
synopsis:            Data structures from Chris Okasaki's "Purely Functional Data Structures" implemented in Haskell
homepage:            https://github.com/robertjlooby/purely-functional-data-structures#readme
license:             BSD3
license-file:        LICENSE
author:              Robert Looby
maintainer:          robertjlooby@gmail.com
copyright:           (c) 2019 Robert Looby
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     BottomUpMergeSort
                     , RealTimeQueue
                     , Queue
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite purely-functional-data-structures-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       BottomUpMergeSortSpec
                     , RealTimeQueueSpec
                     , QueueSpec
  build-depends:       base
                     , purely-functional-data-structures
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/robertjlooby/purely-functional-data-structures
